# course_planner

./: .gitignore  Cargo.toml  README.md  courses.json
backend/: Cargo.toml  courses.json
backend/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  app.css  index.html
frontend/src/: main.rs
frontend/src/components/: alarm.rs  course_details.rs  course_list.rs  course_name_editor.rs  icon.rs  mod.rs  safe_html.rs  stage_editor.rs
