[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
# A lightweight logging facade for Rust 
#log = "0.4.14"
# Extra iterator adaptors, iterator methods, free functions, and macros.
#itertools = "0.10.3"
# A macro for declaring lazily evaluated statics in Rust.
#lazy_static = "1.4.0"
# A generic serialization/deserialization framework
#serde = "1.0.132"
#serde_json = "1.0"

# Web framework with a focus on usability, security, extensibility, and speed. 
[dependencies.rocket]
version = "0.5.0-rc.1"
features = [
    "secrets", 
    "tls", 
    "json"]
