[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humantime = "2.1.0"
# A lightweight logging facade for Rust 
log = "0.4.14"
# A generic serialization/deserialization framework
serde = "1.0.132"
serde_json = "1.0"
# Extra iterator adaptors, iterator methods, free functions, and macros.
itertools = "0.10.3"
