[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
yew = "0.19"
reqwasm = "0.4"
wasm-bindgen-futures = "0.4"
# Bindings for all Web APIs, a procedurally generated crate from WebIDL 
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# A lightweight logging facade for Rust 
log = "0.4.14"
# A logger that sends a message with its Rust source's line and filename to the brow…
wasm-logger = "0.2.0"
