[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true

[dependencies]
common = {path = "../common"}
yew = "0.19"
reqwasm = "0.4"
wasm-bindgen-futures = "0.4"
# Bindings for all Web APIs, a procedurally generated crate from WebIDL 
web-sys = "0.3"
# wee_alloc: The Wasm-Enabled, Elfin Allocator
wee_alloc = "0.4"
gloo-utils = "0.1.2"    # Convenience crate for common `web_sys` features
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# A lightweight logging facade for Rust 
log = "0.4.14"
# A logger that sends a message with its Rust source's line and filename to the brow…
wasm-logger = "0.2.0"
